explained flawed reasoning

--- a/calculator.html
+++ b/calculator.html
@@ -8,72 +8,72 @@
   <body>
     <table style="width:250px">
         <tr class="row">
-            <td colspan="4" id="screen">
-                <div id="result"> 0</div>
+            <td colspan="4">
+                <div id="screen"> 0</div>
             </td>
         </tr>
         <tr class="row">
             <td colspan="2">
-                <button  class="button2col" id="AC">AC</button>
+                <button class="button" id="button2col">AC</button>
             </td>
             <td>
-                <button id="C">C</button>
+                <button class="button">C</button>
             </td>
             <td>
-                <button class="small" id="/">/</button>
-            </td>
-        </tr>
-        <tr class="row">
-            <td>
-                <button id="7">7</button>
-            </td>
-            <td>
-                <button id="8">8</button>  
-            </td>
-            <td>
-                <button id="9">9</button>  
-            </td>
-            <td>
-               <button id="x">X</button>
+                <button class="button" id="small">/</button>
             </td>
         </tr>
         <tr class="row">
             <td>
-                <button id="4">4</button>
+                <button class="button">7</button>
             </td>
             <td>
-                <button id="5">5</button>  
+                <button class="button" >8</button>  
             </td>
             <td>
-                <button id="6">6</button>  
+                <button class="button" >9</button>  
             </td>
             <td>
-                <button  class="mid" id="-">-</button>
+               <button class="button">X</button>
+            </td>
+        </tr>
+        <tr class="row">
+            <td>
+                <button  class="button" >4</button>
+            </td>
+            <td>
+                <button  class="button" >5</button>  
+            </td>
+            <td>
+                <button  class="button" >6</button>  
+            </td>
+            <td>
+                <button  class="button"  id="mid">-</button>
            </td>
         </tr>
         <tr class="row">
             <td>
-                <button  class="mid" id="1">1</button>
+                <button  class="button" id="mid">1</button>
             </td>
             <td>
-                <button id="2">2</button>
+                <button  class="button" >2</button>
             </td>
             <td>
-                <button id="3">3</button>
+                <button  class="button" >3</button>
             </td>
             <td>
-                <button id="+">+</button>
+                <button  class="button" >+</button>
             </td>
         </tr>
         <tr class="row">
             <td colspan="2">
-                <button class="button2col" id="0">0</button>
+                <button class="button" id="button2col">0</button>
             </td>
             <td>
-                <button  class="small" id=".">.</button>
+                <button class="button"  id="small">.</button>
             </td>
             <td>
-                <button id="=">=</button>
+                <button class="button">=</button>
             </td>
         </tr>
     </table>
