button prints to screen

--- a/calculator.html
+++ b/calculator.html
@@ -14,7 +14,7 @@
         </tr>
         <tr class="row">
             <td colspan="2">
-                <button class="button" id="button2col">AC</button>
+                <input type='button' value='AC' onclick='f1(this)' class="button" id="button2col"/>
             </td>
             <td>
                 <button class="button">C</button>
@@ -25,13 +25,13 @@
         </tr>
         <tr class="row">
             <td>
-                <button class="button">7</button>
+                <input type='button' value='7' onclick='f1(this)' class="button"/>
             </td>
             <td>
-                <button class="button" >8</button>  
+                <input type='button' value='8' onclick='f1(this)' class="button"/>
             </td>
             <td>
-                <button class="button" >9</button>  
+            <input type='button' value='9' onclick='f1(this)' class="button"/> 
             </td>
             <td>
                <button class="button">X</button>
@@ -39,13 +39,13 @@
         </tr>
         <tr class="row">
             <td>
-                <button  class="button" >4</button>
+            <input type='button' value='4' onclick='f1(this)' class="button"/>
             </td>
             <td>
-                <button  class="button" >5</button>  
+            <input type='button' value='5' onclick='f1(this)' class="button"/> 
             </td>
             <td>
-                <button  class="button" >6</button>  
+            <input type='button' value='6' onclick='f1(this)' class="button"/> 
             </td>
             <td>
                 <button  class="button"  id="mid">-</button>
@@ -53,14 +53,13 @@
         </tr>
         <tr class="row">
             <td>
-                <button  class="button" id="mid">1</button>
+                <input type='button' value='1' onclick='f1(this)' class="button"/>
             </td>
             <td>
-                <button  class="button" >2</button>
+                <input type='button' value='2' onclick='f1(this)' class="button"/>
             </td>
             <td>
-                <button  class="button" >3</button>
-            </td>
+                <input type='button' value='3' onclick='f1(this)' class="button"/>            </td>
             <td>
                 <button  class="button" >+</button>
             </td>
