numbers and operators going into array

--- a/calculator.html
+++ b/calculator.html
@@ -14,13 +14,13 @@
         </tr>
         <tr class="row">
             <td colspan="2">
-                <input type='button' value='AC' onclick='f1(this)' class="button" id="button2col"/>
+                <input type='button' value='AC' onclick='f2(this)' class="button" id="button2col"/>
             </td>
             <td>
-                <button class="button">C</button>
+                <input type='button' value='C' onclick='f2(this)' class="button"/>
             </td>
             <td>
-                <button class="button" id="small">/</button>
+                <input type='button' value='/' onclick='f2(this)' class="button"/>
             </td>
         </tr>
         <tr class="row">
@@ -31,24 +31,24 @@
                 <input type='button' value='8' onclick='f1(this)' class="button"/>
             </td>
             <td>
-            <input type='button' value='9' onclick='f1(this)' class="button"/> 
+                <input type='button' value='9' onclick='f1(this)' class="button"/> 
             </td>
             <td>
-               <button class="button">X</button>
+                <input type='button' value='*' onclick='f2(this)' class="button"/>
             </td>
         </tr>
         <tr class="row">
             <td>
-            <input type='button' value='4' onclick='f1(this)' class="button"/>
+                <input type='button' value='4' onclick='f1(this)' class="button"/>
             </td>
             <td>
-            <input type='button' value='5' onclick='f1(this)' class="button"/> 
+                <input type='button' value='5' onclick='f1(this)' class="button"/> 
             </td>
             <td>
-            <input type='button' value='6' onclick='f1(this)' class="button"/> 
+                <input type='button' value='6' onclick='f1(this)' class="button"/> 
             </td>
             <td>
-                <button  class="button"  id="mid">-</button>
+                <input type='button' value='-' onclick='f2(this)' class="button" id="mid"/>
            </td>
         </tr>
         <tr class="row">
@@ -59,20 +59,21 @@
                 <input type='button' value='2' onclick='f1(this)' class="button"/>
             </td>
             <td>
-                <input type='button' value='3' onclick='f1(this)' class="button"/>            </td>
+                <input type='button' value='3' onclick='f1(this)' class="button"/>            
+            </td>
             <td>
-                <button  class="button" >+</button>
+                <input type='button' value='+' onclick='f2(this)' class="button"/>
             </td>
         </tr>
         <tr class="row">
             <td colspan="2">
-                <button class="button" id="button2col">0</button>
+                <input type='button' value='0' onclick='f1(this)' class="button" id="button2col"/> 
             </td>
             <td>
-                <button class="button"  id="small">.</button>
+                <input type='button' value='.' onclick='f2(this)' class="button" id="small"/>
             </td>
             <td>
-                <button class="button">=</button>
+                <input type='button' value='=' onclick='f2(this)' class="button"/>
             </td>
         </tr>
     </table>
