success. changed array values to numbers.

--- a/calculator.html
+++ b/calculator.html
@@ -20,7 +20,7 @@
                 <input type='button' value='C' onclick='f2(this)' class="button"/>
             </td>
             <td>
-                <input type='button' value='/' onclick='f1(this)' class="button"/>
+                <input type='button' value='/' onclick='f1(this)' class="button"/ id="small"/>
             </td>
         </tr>
         <tr class="row">
@@ -34,7 +34,7 @@
                 <input type='button' value='9' onclick='f1(this)' class="button"/> 
             </td>
             <td>
-                <input type='button' value='*' onclick='f1(this)' class="button"/>
+                <input type='button' value='*' onclick='f1(this)' class="button"/ id="mid"/>
             </td>
         </tr>
         <tr class="row">
